adding shopping revised bullets

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -270,105 +270,6 @@
       </div>
     </section>
 
-    <!-- Initial Highfi GIF Key Features Section -->
-    <!-- <section class="initial_highfi_features_section">
-      <h4>
-        Initial High-fidelity Key Features
-      </h4>
-      <p>
-        I then created prototype flows of Groovy Groceries' key features to more indepthly explore the experiences users can have within the product.
-      </p> -->
-
-      <!-- Onboarding -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-SignUp.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Onboarding</h4>
-          <p>
-            Students can create their Groovy Groceries account,
-            get connected to their school system, and input their 
-            adjustible budgeting goal.
-          </p>
-        </div>
-      </section> -->
-
-      <!-- Shop -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Shop.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Grocery Shopping</h4>
-          <p>
-            Students can browse through various stores to purchase item using their student card or credit card.
-            Based on student need, there are in-store pickup or delivery options.
-          </p>
-        </div>
-      </section> -->
-
-      <!-- Budget -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Budget.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Budgeting</h4>
-          <p>
-            Students can look up their weekly balance and set a weekly spending goal to helps them keep track of their weekly spendings. 
-            Information on their last transaction, weekly spending, and spending categories are also available.
-          </p>
-        </div>
-      </section> -->
-
-      <!-- Meal Plan -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Plan.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Meal Planning</h4>
-          <p>
-            Students can set up and view weekly meal plan info such as date, meal type (breakfast, lunch, dinner), name, and any planning notes.
-          </p>
-        </div>
-      </section> -->
-
-      <!-- Order History -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Orders.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Order History</h4>
-          <p>
-            Students can see a history of their past transactions as well as current delivery purchases. 
-            The app will show pending or completed orders & track delivery/pickup status for all orders.
-          </p>
-        </div>
-      </section> -->
-
-      <!-- Student Profile -->
-      <!-- <section class="ihf_strip">
-        <div class="ihf_strip_left">
-          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Profile.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
-        </div>
-
-        <div class="ihf_strip_right">
-          <h4>Student Profile</h4>
-          <p>
-            Students can view their student class, major, phone number, and student ID. Additionally, students can log out of the app as needed.
-          </p>
-        </div>
-      </section>
-    </section> -->
-
     <!-- Reiteration of Initial High-fi Wireframes -->
     <section class="reiteration_highfi">
       <h4>
@@ -407,15 +308,12 @@
             <div class="ihf_strip_right">
               <h4>Grocery Shopping - Revised</h4>
               <p>
-                <!-- For the new shopping flow, the accent green colour is now placed specifically on call-to-action elements. Now users can more
-                efficiently and distinctly tell where those elements are simply from a quick glance at the screen. <br><br>
-    
-                For the grocery item page ("Apple" screen) and the My Cart page, I brought more attention to the primary buttons and elements on the screen through
-                making each of the screen background colour be the primary grey as opposed to the harsh white used in the past. I added tabs
-                for listing ingredients and nutritional information when viewing a specific grocery item. Additionally, for the My Cart screen I enlarged 
-                the Pickup and Delivery buttons for greater visibility. -->
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+                <ul style="text-align: left;">
+                  <li style="list-style: circle; font-weight: 200;"> Accent green colour is now placed specifically on call-to-action elements to clearly draw the user's eye </li>
+                  <li style="list-style: circle; font-weight: 200;"> Added tabs for viewing ingredients/nutritional information for individual grocery items</li>
+                  <li style="list-style: circle; font-weight: 200;"> My Cart button is placed in the bottom right corner, and not the top of the screen as prior, for easier access</li>
+                  <li style="list-style: circle; font-weight: 200;"> Delivery and Pickup radio buttons are enlarged for greater accessibility and visibility</li>
+                </ul>
               </p>
             </div>
           </section>
