--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -93,7 +93,7 @@
     </section>
 
     <section class="research">
-      <h4>Research</h4>
+      <h4>Survey Research</h4>
       <p class="research_intro_centered">I conducted user surveys to find out:</p>
       <ol>
         <li>
@@ -105,15 +105,16 @@
       </ol>
 
       <!-- Affinity Diagram and Findings -->
-      <p style="margin-top:3rem">
+      <!-- <p style="margin-top:3rem; display: block; text-align: center;">
         After gathering the responses, I made an affinity diagram to help me consolidate the information.
       </p>
-      <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram">
+      <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram"> -->
 
       <!-- 6 Main Findings -->
       <h4>6 Findings</h4>
-      <p style="margin-top:3rem">
-        From the affinity diagram, I grouped common patterns into 6 main findings:
+      <p style="margin-top: 3rem; display: block; text-align: center;">
+        After gathering the responses, I made an affinity diagram to help me consolidate the information. <br>
+        From there I grouped the common patterns into 6 main findings:
       </p>
       <div class="Row">
         <div class="Column">
@@ -146,15 +147,15 @@
 
       <!-- Empathy Map -->
       <h4 class="empathy_map_title">Empathy Map</h4>
-      <p class="empathy_map_p">
-        I then created an empathy map to represent our users' needs, wants, actions, and thought processes:
+      <p class="empathy_map_p" style="display: block; text-align: center;">
+        I created a empathy map to represent our users' needs, wants, actions, and thought processes:
       </p>
       <img class="empathy_map" src="./groovyimages/Empathy Map.png" alt="Groovy Groceries Empathy Map">
 
 
       <!-- User Persona -->
       <h4 class="user_persona_title">User Persona</h4>
-      <p class="user_persona_p">
+      <p class="user_persona_p" style="display: block; text-align: center;">
         Extending from my empathy map, I made a user persona to better pinpoint our product's users and their needs:
       </p>
       <img class="user_persona" src="./groovyimages/User Persona.png" alt="Groovy Groceries User Persona">
@@ -163,7 +164,7 @@
       <h4 class="information_architecture_title">
         Information Architecture
       </h4>
-      <p class="information_architecture_p">
+      <p class="information_architecture_p" style="display: block; text-align: center;">
         I then made an information architecture to map out user navigation from one experience flow to another.
       </p>
       <img class="information_architecture" src="./groovyimages/Information Architecture.png" alt="Groovy Groceries Information Architecture">
@@ -172,11 +173,12 @@
       <h4 class="lowfi_title">
         Low-fidelity Wireframes
       </h4>
-      <p class="lowfi_p">
-        Using the information architecture... <br>
-        I created low-fidelity wireframes that translates our user experience flows into Groovy Groceries' early design concepts.
+      <p class="lowfi_p" style="display: block; text-align: center;">
+        Using the information architecture,
+        I created low-fidelity wireframes that translates <br>
+        our user experience flows into Groovy Groceries' early design concepts.
       </p>
-      <img class="low_fidelity_wireframes" src="./groovyimages/Lowfi Wireframes.png" alt="Groovy Groceries Low Fidelity Wireframes">
+      <img class="low_fidelity_wireframes" src="./groovyimages/lowfiWireframeFlows-compressed.png" alt="Groovy Groceries Low Fidelity Wireframe Flows">
     </section>
 
     <!-- First Iteration of High Fidelity Wireframes -->
@@ -184,9 +186,9 @@
       <h4 class="first_highfi_title">
         Initial High-fidelity Wireframes
       </h4>
-      <p class="highfi_p">
+      <p class="highfi_p" style="display: block; text-align: center;">
         From the lowfi, I created the first round of iterations of high-fidelity wireframes. <br>
-        I iterated on the user flow, element interactions, and visual UI elements. <br>
+        I iterated on the user flow, element interactions, and visual UI elements. <br><br>
         Below are 4 main screens from this round of iterations: 
       </p>
       <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Highfi Wireframes">
@@ -195,22 +197,16 @@
     <!-- Reiteration of Initial High-fi Wireframes -->
     <section class="reiteration_highfi">
       <h4>
-        Revision of High-fidelity Wireframes
+        Reiteration on Design
       </h4>
-      <p>
+      <p style="display: block; text-align: center;">
         After taking some time for personal design study, speaking with UX mentors, and rethinking my design...
-        <br>I came back to reiterate on three main flows: 
-        shopping, meal planning, and budgeting.
-      </p>
-      <p>
-        In my initial high-fidelity wireframes - <br>
-        many of my colour and font usage were not organized and lacked specific design hierarchy. <br><br>
+        <br>I came back to reiterate on three main flows: <br>
+        shopping, meal planning, and budgeting. <br><br>
 
-        For this new round of iterations -<br>
-        I simplified our palette to two colours, and created a consistent & simple typography ramp.
-      </p>
-      <p>
-        To improve user experience and visual cohesion, I reiterated the user-flow and UI element placement.
+        For this new round of iterations - <br>
+        I simplified our palette to two colours, and created a simple & more consistent typography ramp. <br>
+        I reiterated the user-flow and UI elements to further improve user experience and visual cohesion.
       </p>
       
       <div class="font_and_colour_main_div">
