updated IA, user persona, and empathy map visuals

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -18,7 +18,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./groovyicons/tabIcon.png"
+      href="../../icons/tabIcon.png"
     />
 
     <title> Ann C. Tseng | Groovy Groceries </title>
@@ -94,13 +94,13 @@
 
     <section class="research">
       <h4>Survey Research</h4>
-      <p class="research_intro_centered">I conducted user surveys to find out:</p>
+      <p class="research_intro_centered" style="margin-top: 3rem; display: block; text-align: center;">I conducted user surveys to find out:</p>
       <ol>
-        <li>
-          Preferences and barriers that can impact a user's grocery shopping experience.
+        <li style="margin-left: 3rem; display: block; text-align: left;">
+          1. references and barriers that can impact a user's grocery shopping experience.
         </li>
-        <li>
-          How a user may go about meal planning and budgeting.
+        <li style="margin-left: 3rem; display: block; text-align: left;">
+          2. How a user may go about meal planning and budgeting.
         </li>
       </ol>
 
@@ -148,7 +148,7 @@
       <!-- Empathy Map -->
       <h4 class="empathy_map_title">Empathy Map</h4>
       <p class="empathy_map_p" style="display: block; text-align: center;">
-        I created a empathy map to represent our users' needs, wants, actions, and thought processes:
+        Our users' needs, wants, actions, and thought processes
       </p>
       <img class="empathy_map" src="./groovyimages/Empathy Map.png" alt="Groovy Groceries Empathy Map">
 
@@ -156,7 +156,7 @@
       <!-- User Persona -->
       <h4 class="user_persona_title">User Persona</h4>
       <p class="user_persona_p" style="display: block; text-align: center;">
-        Extending from my empathy map, I made a user persona to better pinpoint our product's users and their needs:
+        I specified our users' various aspiration, wishes, needs, and struggles
       </p>
       <img class="user_persona" src="./groovyimages/User Persona.png" alt="Groovy Groceries User Persona">
 
@@ -173,49 +173,48 @@
       <h4 class="lowfi_title">
         Low-fidelity Wireframes
       </h4>
-      <p class="lowfi_p" style="display: block; text-align: center;">
+      <!-- <p class="lowfi_p" style="display: block; text-align: center;">
         Using the information architecture,
-        I created low-fidelity wireframes that translates <br>
+        I created low-fidelity wireframes to translates <br>
         our user experience flows into Groovy Groceries' early design concepts.
-      </p>
-      <img class="low_fidelity_wireframes" src="./groovyimages/lowfiWireframeFlows-compressed.png" alt="Groovy Groceries Low Fidelity Wireframe Flows">
+      </p> -->
+      <img class="low_fidelity_wireframes" src="./groovyimages/LowfiFlow.png" alt="Groovy Groceries Low Fidelity Wireframe Flows">
     </section>
 
     <!-- First Iteration of High Fidelity Wireframes -->
     <section class="first_highfi">
       <h4 class="first_highfi_title">
-        Initial High-fidelity Wireframes
+        First Round of Mid to High-fidlity Iterations
       </h4>
-      <p class="highfi_p" style="display: block; text-align: center;">
-        From the lowfi, I created the first round of iterations of high-fidelity wireframes. <br>
-        I iterated on the user flow, element interactions, and visual UI elements. <br><br>
-        Below are 4 main screens from this round of iterations: 
-      </p>
       <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Highfi Wireframes">
+      <p class="highfi_p" style="display: block; text-align: center;">
+        During this round of iterative design, the designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
+        I was unsatisfied with them, and so I took some time to study more on User-Experience Interface design, and gain critique on <br>
+        the designs from UX industry mentors.
+      </p>
     </section>
 
     <!-- Reiteration of Initial High-fi Wireframes -->
     <section class="reiteration_highfi">
       <h4>
-        Reiteration on Design
+        Second Round of Iterations
       </h4>
       <p style="display: block; text-align: center;">
-        After taking some time for personal design study, speaking with UX mentors, and rethinking my design...
-        <br>I came back to reiterate on three main flows: <br>
+        After taking some time for study and rethinking the design -
+        <br>I came back to reiterate on three main sections:
         shopping, meal planning, and budgeting. <br><br>
 
-        For this new round of iterations - <br>
-        I simplified our palette to two colours, and created a simple & more consistent typography ramp. <br>
-        I reiterated the user-flow and UI elements to further improve user experience and visual cohesion.
+        <!-- I simplified our palette to two colours, and created a simple & more consistent typography ramp. <br>
+        I reiterated the user-flow and UI elements to further improve user experience and visual cohesion. -->
       </p>
       
-      <div class="font_and_colour_main_div">
+      <!-- <div class="font_and_colour_main_div">
         <div class="font_and_colour_left_div">
           <img class="colour_pallet" src="./groovyimages/Design Font + Colour/Colour Palette.png" alt="Groovy Groceries Colour Pallet">
         </div>
         <div class="font_and_colour_right_div">
           <img class="font_ramp" src="./groovyimages/Design Font + Colour/Typography Ramp.png" alt="Groovy Groceries Typography Ramp">
-        </div>
+        </div> -->
       </div>
 
       <!-- Grocery Shopping Revised -->
