margin fixed for Groovy Groceries conclusion

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -105,16 +105,13 @@
       </ol>
 
       <!-- Affinity Diagram and Findings -->
-      <!-- <p style="margin-top:3rem; display: block; text-align: center;">
-        After gathering the responses, I made an affinity diagram to help me consolidate the information.
-      </p>
-      <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram"> -->
+      <!-- <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram"> -->
 
       <!-- 6 Main Findings -->
       <h4>6 Findings</h4>
       <p style="margin-top: 3rem; display: block; text-align: center;">
         After gathering the responses, I made an affinity diagram to help me consolidate the information. <br>
-        From there I grouped the common patterns into 6 main findings:
+        Using the diagram, I grouped common patterns into 6 main findings:
       </p>
       <div class="Row">
         <div class="Column">
@@ -184,14 +181,14 @@
     <!-- First Iteration of High Fidelity Wireframes -->
     <section class="first_highfi">
       <h4 class="first_highfi_title">
-        First Round of Mid to High-fidlity Iterations
+        Initial Round of Iterations
       </h4>
-      <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Highfi Wireframes">
       <p class="highfi_p" style="display: block; text-align: center;">
-        During this round of iterative design, the designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
-        I was unsatisfied with them, and so I took some time to study more on User-Experience Interface design, and gain critique on <br>
-        the designs from UX industry mentors.
+        During this round, my designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
+        I was unsatisfied with them, so I took some time to study more on interface design, as well as gather <br> 
+        critique on my work from UX industry mentors.
       </p>
+      <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Highfi Wireframes">
     </section>
 
     <!-- Reiteration of Initial High-fi Wireframes -->
@@ -199,53 +196,47 @@
       <h4>
         Second Round of Iterations
       </h4>
-      <p style="display: block; text-align: center;">
-        After taking some time for study and rethinking the design -
-        <br>I came back to reiterate on three main sections:
+      <p class="highfi_p" style="display: block; text-align: center;">
+        After some studies and rethinking my design -
+        I reiterated on three main experiences: <br>
         shopping, meal planning, and budgeting. <br><br>
-
-        <!-- I simplified our palette to two colours, and created a simple & more consistent typography ramp. <br>
-        I reiterated the user-flow and UI elements to further improve user experience and visual cohesion. -->
       </p>
-      
-      <!-- <div class="font_and_colour_main_div">
-        <div class="font_and_colour_left_div">
-          <img class="colour_pallet" src="./groovyimages/Design Font + Colour/Colour Palette.png" alt="Groovy Groceries Colour Pallet">
-        </div>
-        <div class="font_and_colour_right_div">
-          <img class="font_ramp" src="./groovyimages/Design Font + Colour/Typography Ramp.png" alt="Groovy Groceries Typography Ramp">
-        </div> -->
-      </div>
+    <section>
 
-      <!-- Grocery Shopping Revised -->
-      <!-- Meal Planning Revised -->
-      <!-- Budgeting Revised -->
-
+    <!-- Reiteration of Initial High-fi Wireframes -->
+    <section class="reiteration_highfi">
+      <h4>
+        Final Solution
+      </h4>
+      <p class="highfi_p" style="display: block; text-align: center;">
+      </p>
+    <section>
 
     <!-- Learnings and Reflection -->
-    <section class="learnings_and_improvements">
+    <section>
       <h4>
         What I Learned
       </h4>
-      <p>
-        Grocery purchases, planning, and budgeting can vary diversely between our users. I aimed to create a solution to allow our users the 
-        flexibility and efficiency of addressing their particular need, whether that be all experiences this product has to offer or portions of it. 
-        Through iterating on specific flows of our solution multiple times, this greatly allowed me to further think through our users' experiences 
-        within that particular aspect of our overall solution.
+      <p style="display: block; text-align: center;">
+        Grocery purchases, planning, and budgeting can vary diversely between our users. <br>
+        I aimed to create a solution to allow our users the flexibility and efficiency of addressing their need, <br>
+        whether that be all experiences this product has to offer or portions of it. <br>
+        Through iterating on specific flows of our solution multiple times, this greatly allowed me to <br>
+        further think through our users' experiences within that particular aspect of our overall solution.
       </p>
 
       <h4>
         Future Improvements
       </h4>
-      <p>
-        In the future I would want to achieve a majority of our respondents to be university students within our research, 
-        and to incorporate more user interviews within a design cycle. Through doing so, we could gather more feedback on our
-        design and iterate further on those reviews.
+      <p style="display: block; text-align: center;">
+        In the future I want to achieve a majority of our respondents to be university students, <br>
+        and to incorporate more user interviews within our design cycle. From the feedback, I could <br>
+        then iterate further on the designs for Groovy Groceries.
       </p>
       <br>
       <br>
       <br>
-    </section>
+    <section>
 
     <!-- CASE STUDY END! -->
 
