updated lowfi display

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -184,7 +184,7 @@
         Initial Round of Iterations
       </h4>
       <p class="highfi_p" style="display: block; text-align: center;">
-        During this round, my designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
+        During this round, my designs lacked visual cohesion, appeal, and sufficient feedback.<br>
         I was unsatisfied with them, so I took some time to study more on interface design, as well as gather <br> 
         critique on my work from UX industry mentors.
       </p>
@@ -197,8 +197,7 @@
         Second Round of Iterations
       </h4>
       <p class="highfi_p" style="display: block; text-align: center;">
-        After some studies and rethinking my design -
-        I reiterated on three main experiences: <br>
+        I came back to reiterate on the three main experiences:
         shopping, meal planning, and budgeting. <br><br>
       </p>
     <section>
