working on second round iteration content for groovy groceries:

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -198,7 +198,8 @@
       </h4>
       <p class="highfi_p" style="display: block; text-align: center;">
         I came back to reiterate on the three main experiences:
-        shopping, meal planning, and budgeting. <br><br>
+        shopping, meal planning, and budgeting. <br>
+        Gaining feedback on my designs and studies, I made key changes to my previous work as shown below.
       </p>
     <section>
 
