updated front page visual

--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
           loading="lazy"
           class="hero-img"
         />
-        <div class="bio">
-          <h2 class="bio-title">Hello there!</h2>
-          <p class="bio-text">
-            I'm an undergraduate student studying UX Design and Computer Science at Western Washington University!
-            I am a curious designer who seeks designing and developing to create compelling user experiences!
-          </p>
-        </div>
+
+          <div class="bio">
+            <h2 class="bio-title">Hi there, this is Ann! &#128522;</h2>
+            <p class="bio-text">
+              Currently an undergraduate student studying UX Design and Computer Science at Western Washington University!
+              I am a curious learner who seeks to use design and development as a bridge towards creating compelling user experiences!
+            </p>
+          </div>
     </section>
 
     <!-- Projects section -->
@@ -102,17 +103,6 @@
           </div>
         </div>
     </section>
-
-    <!-- Social accounts - Fixed to the right -->
-    <div class="socials">
-        <a href="https://www.linkedin.com/in/annct/" target="_blank"
-          ><img
-            src="assets/icons/linkedin.png"
-            alt="Linkedin"
-            loading="lazy"
-            class="socicon"
-        /></a>
-    </div>
 
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
