added before and after sections

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -93,25 +93,16 @@
     </section>
 
     <section class="research">
-      <h4>Survey Research</h4>
-      <p class="research_intro_centered" style="margin-top: 3rem; display: block; text-align: center;">I conducted user surveys to find out:</p>
-      <ol>
-        <li style="margin-left: 3rem; display: block; text-align: left;">
-          1. references and barriers that can impact a user's grocery shopping experience.
-        </li>
-        <li style="margin-left: 3rem; display: block; text-align: left;">
-          2. How a user may go about meal planning and budgeting.
-        </li>
-      </ol>
-
       <!-- Affinity Diagram and Findings -->
       <!-- <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram"> -->
 
       <!-- 6 Main Findings -->
-      <h4>6 Findings</h4>
+      <h4>Research & 6 Findings</h4>
       <p style="margin-top: 3rem; display: block; text-align: center;">
+        I conducted user surveys to find out about preferences and barriers that can impact a user's grocery shopping experience. <br>
+        Additionally I asked users how they may go about planning meals or budgeting. <br>
         After gathering the responses, I made an affinity diagram to help me consolidate the information. <br>
-        Using the diagram, I grouped common patterns into 6 main findings:
+        Using the affinity diagram, I grouped common patterns into 6 main findings:
       </p>
       <div class="Row">
         <div class="Column">
@@ -145,7 +136,8 @@
       <!-- Empathy Map -->
       <h4 class="empathy_map_title">Empathy Map</h4>
       <p class="empathy_map_p" style="display: block; text-align: center;">
-        Our users' needs, wants, actions, and thought processes
+        I consolidated these findings into an empathy map in order to succinctly <br>
+        see my users' needs, wants, actions, and thought processes.
       </p>
       <img class="empathy_map" src="./groovyimages/Empathy Map.png" alt="Groovy Groceries Empathy Map">
 
@@ -153,7 +145,7 @@
       <!-- User Persona -->
       <h4 class="user_persona_title">User Persona</h4>
       <p class="user_persona_p" style="display: block; text-align: center;">
-        I specified our users' various aspiration, wishes, needs, and struggles
+        I then specified our users' aspiration, wishes, needs, and struggles.
       </p>
       <img class="user_persona" src="./groovyimages/User Persona.png" alt="Groovy Groceries User Persona">
 
@@ -162,7 +154,7 @@
         Information Architecture
       </h4>
       <p class="information_architecture_p" style="display: block; text-align: center;">
-        I then made an information architecture to map out user navigation from one experience flow to another.
+        To map out user navigation and understand how one experience connects to another, I created an information architecture.
       </p>
       <img class="information_architecture" src="./groovyimages/Information Architecture.png" alt="Groovy Groceries Information Architecture">
 
@@ -184,11 +176,11 @@
         Initial Round of Iterations
       </h4>
       <p class="highfi_p" style="display: block; text-align: center;">
-        During this round, my designs lacked visual cohesion, appeal, and sufficient feedback.<br>
-        I was unsatisfied with them, so I took some time to study more on interface design, as well as gather <br> 
+        During my initial design for the mid-fidelity wireframes, my designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
+        Therefore I took some time to study more on interface design, and gather
         critique on my work from UX industry mentors.
       </p>
-      <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Highfi Wireframes">
+      <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Wireframes">
     </section>
 
     <!-- Reiteration of Initial High-fi Wireframes -->
@@ -201,15 +193,21 @@
         shopping, meal planning, and budgeting. <br>
         Gaining feedback on my designs and studies, I made key changes to my previous work as shown below.
       </p>
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2ndHighfi Shopping.png" alt="Groovy Groceries Second Iteration Wireframes">
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Items.png" alt="Groovy Groceries Second Iteration Wireframes">
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Budget.png" alt="Groovy Groceries Second Iteration Wireframes">
+      <img class="secondHighfiImg" src="./groovyimages/2nd Redesign highfi/BeforeAndAfter/2nd Highfi Mealplan.png" alt="Groovy Groceries Second Iteration Wireframes">
     <section>
 
-    <!-- Reiteration of Initial High-fi Wireframes -->
-    <section class="reiteration_highfi">
+    <!-- Final Solution -->
+    <section>
       <h4>
         Final Solution
       </h4>
-      <p class="highfi_p" style="display: block; text-align: center;">
-      </p>
+      <p style="display: block; text-align: center;"> ... </p>
+      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Shopping.gif" alt="Groovy Groceries Final Wireframes">
+      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Budget.gif" alt="Groovy Groceries Final Wireframes">
+      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Mealplan.gif" alt="Groovy Groceries Final Wireframes">
     <section>
 
     <!-- Learnings and Reflection -->
