added Final Solution section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -176,9 +176,9 @@
         Initial Round of Iterations
       </h4>
       <p class="highfi_p" style="display: block; text-align: center;">
-        During my initial design for the mid-fidelity wireframes, my designs lacked visual cohesion, appeal, and sufficient user feedback.<br>
-        Therefore I took some time to study more on interface design, and gather
-        critique on my work from UX industry mentors.
+        During my initial design for the mid-fidelity wireframes, my designs lacked visual cohesion and sufficient user feedback.<br>
+        Therefore I took some time to study more interface design, and gains
+        critique on my work from users and UX industry mentors.
       </p>
       <img class="initialHighfiImg" src="./groovyimages/initialhighfi/InitialHighFi.png" alt="Groovy Groceries Initial Wireframes">
     </section>
@@ -204,11 +204,49 @@
       <h4>
         Final Solution
       </h4>
-      <p style="display: block; text-align: center;"> ... </p>
-      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Shopping.gif" alt="Groovy Groceries Final Wireframes">
-      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Budget.gif" alt="Groovy Groceries Final Wireframes">
-      <img class="finalSolutionGifs" src="./groovyimages/2nd Redesign highfi/Mealplan.gif" alt="Groovy Groceries Final Wireframes">
-    <section>
+      <div class="final_solution_card">
+        <div class="gif">
+          <img src="./groovyimages/2nd Redesign highfi/Shopping.gif" alt="Groovy Groceries Final Wireframes">
+        </div>
+        <div class="words">  
+          <h4>Shopping</h4>
+          <p>
+            1. Students can browse through university-affiliated store for grocery items <br> <br> 
+            2. Purchases allow student card (or other payment cards) <br> <br>
+            3. Delivery and in-store pickup availability for student preference and convenience <br> <br>
+          </p>
+        </div>
+      </div>
+
+      <div class="final_solution_card">
+        <div class="gif">
+          <img src="./groovyimages/2nd Redesign highfi/Budget.gif" alt="Groovy Groceries Final Wireframes">
+        </div>
+        <div class="words"> 
+          <h4>Budgeting</h4>
+          <p>
+            <p>
+              1. Students can quickly view weekly spending compared to weekly limit <br> <br>
+              2. Weekly Activity Bar Graph display spending categories <br> <br>
+              3. Detailed Transactions document monthly spending trend & recent purchases <br> <br>
+            </p>
+          </p>
+        </div>
+      </div>
+
+      <div class="final_solution_card">
+        <div class="gif">
+          <img src="./groovyimages/2nd Redesign highfi/Mealplan.gif" alt="Groovy Groceries Final Wireframes">
+        </div>
+        <div class="words">
+          <h4>Meal Planning</h4>
+          <p>
+            1. Quick selection of a specific day of the week<br> <br>
+            2. Meal plan edits and additions quickly made for chosen day <br> <br>
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Learnings and Reflection -->
     <section>
